--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,8 @@
 <header>
   <div class="wrapper">
-    Biscuit recruitment
+    <a href="/">
+      <%= image_tag 'biscuit-recruitment-logo.jpg', class: 'logo' %>
+    </a>
     <a class="menu-toggle" href='javascript:void(0)'>
       Menu
       <span class="ss-icon ss-standard">&#xE9A1;</span>
