--- a/app/views/shared/_search_box.html.erb
+++ b/app/views/shared/_search_box.html.erb
@@ -7,12 +7,22 @@
     </div>
     <label for="category">Vacancy Type</label>
     <div class="radio-buttons">
-      <input type="radio" name="vacancy_type" value="Permanent" checked="true" >
-      Perm
-      <input type="radio" name="vacancy_type" value="Temporary">
-      Temp
-      <input type="radio" name="vacancy_type" value="Contract">
-      Contract
+      <div class="radio-option">
+        <input type="radio" name="vacancy_type" value="Permanent" checked="true" >
+        Perm
+      </div>
+      <div class="radio-option">
+        <input type="radio" name="vacancy_type" value="Temporary">
+        Temp
+      </div>
+      <div class="radio-option">
+        <input type="radio" name="vacancy_type" value="Contract">
+        Contract
+      </div>
+      <div class="radio-option">
+        <input type="radio" name="vacancy_type" value="">
+        All
+      </div>
     </div>
 
     <input type='submit' value="Search Jobs">
