--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -3,12 +3,15 @@ meta :title => @page.title + " | Biscuit Recruitment",
      :description => @page.meta_description,
      :keywords => @page.meta_keywords
 %>
-<div class="header-image" <%= ("style=background:" + "url('" + @page.header_image.url + "')" ) if @page.header_image.exists? %>>
-</div>
 
 <div class="wrapper">
-  <h1 class="page-title"><%= @page.title %></h1>
-  <div class="page-content">
-    <%= raw(@page.content) %>
+  <div class="page">
+    <h1 class="page-title"><%= @page.title %></h1>
+    <div class="header-image" <%= ("style=background:" + "url('" + @page.header_image.url + "')" + ';background-size:cover;' ) if @page.header_image.exists? %>>
+</div>
+    <div class="page-content">
+      <%= raw(@page.content) %>
+    </div>
   </div>
+  <%= render 'shared/sidebar' %>
 </div>
