--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,8 +31,10 @@
             <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
         <![endif]-->
 
-        <%= render 'shared/header' %>
-        <%= yield %>
+        <div class="page-wrap">
+          <%= render 'shared/header' %>
+          <%= yield %>
+        </div>
         <%= render 'shared/footer' %>
 
         <%= javascript_include_tag "application" %>
