--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -1,8 +1,12 @@
-<div class="blog-posts">
-  <div class="blog-post">
+<div class="wrapper">
+  <div class="blog-posts">
+    <h1 class="page-title">Blog</h1>
     <% @blog_posts.each do |blog_post| %>
-      <%= blog_post.title %>
+      <div class="blog-post">
+        <%= blog_post.title %>
+      </div>
     <% end %>
     <%= paginate @blog_posts %>
   </div>
+  <%= render 'shared/recent_posts' %>
 </div>
