--- a/app/views/vacancies/index.html.erb
+++ b/app/views/vacancies/index.html.erb
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wrapper job-list-wrapper">
     <div class="job-list">
       <h1 class="page-title">jobs</h1>
       <% if @vacancies.count > 0 %>
