--- a/app/views/vacancies/show.html.erb
+++ b/app/views/vacancies/show.html.erb
@@ -3,7 +3,7 @@ meta :title => @vacancy.title + " | Biscuit Recruitment",
      :description => sanitize(@vacancy.description[0,180])
 %>
 
-<div class="wrapper">
+<div class="wrapper job-wrapper">
   <div class="job-page">
     <h1 class="page-title"><%= @vacancy.title %></h1>
     <div class="job">
