--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -4,7 +4,7 @@ meta :title => @page.title + " | Biscuit Recruitment",
      :keywords => @page.meta_keywords
 %>
 
-<div class="wrapper">
+<div class="wrapper page-wrapper">
   <div class="page">
     <h1 class="page-title"><%= @page.title %></h1>
     <div class="header-image" <%= ("style=background:" + "url('" + @page.header_image.url + "')" + ';background-size:cover;' ) if @page.header_image.exists? %>>
