added contact page image

--- a/app/assets/stylesheets/layout/_general.scss
+++ b/app/assets/stylesheets/layout/_general.scss
@@ -117,6 +117,10 @@ header .main-menu li a {
   height: 430px;
   background: url('homepage-bg.png');
 }
+.contact-header-image {
+  background: url('contact-banner.jpg');
+  height: 330px;
+}
 .homepage .header-image {
   margin-bottom: -235px;
   height: 565px;
