--- a/app/views/enquiries/new.html.erb
+++ b/app/views/enquiries/new.html.erb
@@ -1,4 +1,4 @@
-<div class="header-image">
+<div class="header-image contact-header-image">
 </div>
 <div class="wrapper contact-page">
   <div class="page-content">
