--- a/app/assets/stylesheets/layout/_general.scss
+++ b/app/assets/stylesheets/layout/_general.scss
@@ -42,11 +42,11 @@ header {
   color: $white;
 }
 header .logo {
-  margin: 15px 0;
+  margin: 15px 30px;
 }
 header .menu-toggle {
   float: right;
-  margin-top: 50px;
+  margin: 50px 30px 0 0;
   font-size: 14px;
   font-weight: $light;
   text-transform: uppercase;
@@ -78,7 +78,7 @@ header .main-menu .close {
   color: $dark-grey;
   float: right;
   font-size: 14px;
-  margin: 45px 30px 0 0;
+  margin: 45px 0 0 0;
   text-decoration: none;
   text-transform: uppercase;
   span {
@@ -174,6 +174,7 @@ header .main-menu li a {
 }
 .homepage .title-block .logo {
   width: 435px;
+  max-width: 100%;
   margin: 0 10px;
 }
 .homepage .title-block .caption {
@@ -628,7 +629,7 @@ footer .copyright {
   color: $white;
   float: left;
   font-size: 12px;
-  margin: 25px 0 0 0;
+  margin: 47px 0 0 0;
 }
 footer .soloweb-logo {
   float: right;
