--- a/app/assets/stylesheets/layout/_general.scss
+++ b/app/assets/stylesheets/layout/_general.scss
@@ -62,12 +62,11 @@ header .menu-toggle {
 header .main-menu {
   position: absolute;
   display: none;
-  width: 100%;
+  min-width: 100%;
   height: 100%;
   background: $yellow;
   left: 0;
   top: 0;
-  bottom: 0;
   z-index: 100;
   opacity: 0.9;
   -webkit-animation-duration: 0.5s;
