--- a/app/assets/stylesheets/layout/_general.scss
+++ b/app/assets/stylesheets/layout/_general.scss
@@ -62,8 +62,8 @@ header .menu-toggle {
 header .main-menu {
   position: absolute;
   display: none;
-  min-width: 100%;
-  height: 100%;
+  width: 100%;
+  min-height: 100%;
   background: $yellow;
   left: 0;
   top: 0;
