--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -1,9 +1,9 @@
-<div class="wrapper">
+<div class="wrapper blog-posts-wrapper">
   <div class="blog-posts">
     <h1 class="page-title">Blog</h1>
     <% @blog_posts.each do |blog_post| %>
       <div class="blog-post">
-        <%= blog_post.title %>
+        <%= link_to blog_post.title, blog_post_path(blog_post) %>
       </div>
     <% end %>
     <%= paginate @blog_posts %>
