--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@ meta :description => ""
   <div class="wrapper">
     <div class="col1">
       <div class="title-block">
-        <%= image_tag 'biscuit-recruitment-logo.jpg', class: 'logo' %>
+        <%= image_tag 'biscuit-recruitment-transparent.png', class: 'logo' %>
         <p class="caption">the 'can do' agency partner</p>
       </div>
 
