--- a/app/assets/stylesheets/layout/_mobile.scss
+++ b/app/assets/stylesheets/layout/_mobile.scss
@@ -188,6 +188,10 @@
   footer .social li span {
     float: none;
   }
+  footer .col form {
+    width: 90%;
+    padding: 0 10%;
+  }
   footer .col form input[type='text'] {
     width: 70%;
   }
