--- a/app/assets/stylesheets/base/site_settings.scss
+++ b/app/assets/stylesheets/base/site_settings.scss
@@ -10,7 +10,8 @@ $medium-grey: #dedede;
 $medium-dark-grey: #c6c6c6;
 $dark-grey: #505050;
 
-$font1: "didot";
+// $font1: "didot";
+$font1: "freight-display-pro";
 $font2: "proxima-nova";
 $grey-text: #9c9c9c;
 
