--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -3,7 +3,9 @@
     <h1 class="page-title">Blog</h1>
     <% @blog_posts.each do |blog_post| %>
       <div class="blog-post">
-        <%= link_to blog_post.title, blog_post_path(blog_post) %>
+        <h3><%= link_to blog_post.title, blog_post_path(blog_post) %></h3>
+        <%= raw(blog_post.content[0, 150]) %><%= '...' if blog_post.content.size > 150 %>
+        <%= link_to 'Read more', blog_post_path(blog_post) if blog_post.content.size > 150 %>
       </div>
     <% end %>
     <%= paginate @blog_posts %>
