added social links to footer

--- a/app/assets/stylesheets/layout/_general.scss
+++ b/app/assets/stylesheets/layout/_general.scss
@@ -645,6 +645,10 @@ footer .social li {
   float: left;
   clear: left;
   margin-bottom: 5px;
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
 }
 footer .social span {
   margin: -4px 15px 0 0;
