--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -13,8 +13,16 @@
       <div class="col">
         <h3>Connect</h3>
         <ul class="social">
-          <li><span class="ss-icon ss-social-regular">&#xF611;</span>Twitter</li>
-          <li><span class="ss-icon ss-social-regular">&#xF612;</span>Linkedin</li>
+          <li>
+            <a href="http://twitter.com" target='_blank'>
+              <span class="ss-icon ss-social-regular">&#xF611;</span>Twitter
+            </a>
+          </li>
+          <li>
+            <a href="http://linkedin.com" target='_blank'>
+              <span class="ss-icon ss-social-regular">&#xF612;</span>Linkedin
+            </a>
+          </li>
         </ul>
       </div>
 
