--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,7 +5,7 @@
         <h3>Contact</h3>
         <ul class="contact">
           <li><span class="ss-icon ss-gizmo">&#x1F4DE;</span>0234 567 899</li>
-          <li><span class="ss-icon ss-gizmo">&#x2709;</span>info@biscuitrecruitment.com</li>
+          <li><span class="ss-icon ss-gizmo">&#x2709;</span><a href="mailto:info@biscuitrecruitment.com">info@biscuitrecruitment.com</a></li>
         </ul>
         <div class="copyright">copyright © biscuit recruitment. All rights reserved</div>
       </div>
