--- a/app/views/enquiries/new.html.erb
+++ b/app/views/enquiries/new.html.erb
@@ -23,7 +23,7 @@
     <h4>Contact</h4>
     <ul class="contact">
       <li><span class="ss-icon ss-gizmo">&#x1F4DE;</span>0234 567 899</li>
-      <li><span class="ss-icon ss-gizmo">&#x2709;</span>info@biscuitrecruitment.com</li>
+      <li><span class="ss-icon ss-gizmo">&#x2709;</span><a href="mailto:info@biscuitrecruitment.com">info@biscuitrecruitment.com</a></li>
     </ul>
 
     <h4>Connect</h4>
